force-app/main/default/objects/Resale_Process__c/Resale_Process__c.object-meta.xml
<CustomObject>
    <description>Resale Process</description>
    <label>Resale Process</label>
    <nameField>
        <displayFormat>RPN-{0000}</displayFormat>
        <label>Resale Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resale Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>