force-app/main/default/objects/Resale_Process__c/fields/Accounts_Approval_date__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Approval_date__c</fullName>
    <label>Accounts Approval date</label>
    <type>DateTime</type>
</CustomField>