force-app/main/default/objects/Resale_Process__c/fields/Agreement_Docusign_Completed__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Docusign_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Docusign Completed</label>
    <type>Checkbox</type>
</CustomField>