force-app/main/default/objects/Resale_Process__c/fields/Amount_of_PDC__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_PDC__c</fullName>
    <label>Amount of PDC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>