force-app/main/default/objects/Resale_Process__c/fields/Amount_of_PDC_to_be_collected_from_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_PDC_to_be_collected_from_Buyer__c</fullName>
    <label>Amount of PDC to be collected from Buyer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>