force-app/main/default/objects/Resale_Process__c/fields/Amount_paid_till_date_by_the_Transferor__c.field-meta.xml
<CustomField>
    <fullName>Amount_paid_till_date_by_the_Transferor__c</fullName>
    <formula>ROUND(Booking__r.Paid_Amount_For_Process__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount paid till date by the Transferor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>