force-app/main/default/objects/Resale_Process__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Resale Process</relationshipLabel>
    <relationshipName>Resale_Process</relationshipName>
    <type>Lookup</type>
</CustomField>