force-app/main/default/objects/Resale_Process__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending for Accounts Approval</fullName>
            </value>
            <value>
                <fullName>Pending for Collections Approval</fullName>
            </value>
            <value>
                <fullName>Pending for Audit Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by Collections</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Approved by DLD</fullName>
                <isActive>false</isActive>
                <label>Approved by DLD</label>
            </value>
            <value>
                <fullName>Pending for DLD Approval</fullName>
                <isActive>false</isActive>
                <label>Pending for DLD Approval</label>
            </value>
            <value>
                <fullName>Rejected by DLD</fullName>
                <isActive>false</isActive>
                <label>Rejected by DLD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>