force-app/main/default/objects/Resale_Process__c/fields/Audit_Rejection_Comments_Additional__c.field-meta.xml
<CustomField>
    <fullName>Audit_Rejection_Comments_Additional__c</fullName>
    <label>Audit Rejection Comments - Additional</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>