force-app/main/default/objects/Resale_Process__c/fields/Audit_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Rejection_Date__c</fullName>
    <label>Audit Rejection Date</label>
    <type>DateTime</type>
</CustomField>