force-app/main/default/objects/Resale_Process__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Resale Process</relationshipLabel>
    <relationshipName>Resale_Process</relationshipName>
    <type>Lookup</type>
</CustomField>