force-app/main/default/objects/Resale_Process__c/fields/Building_No__c.field-meta.xml
<CustomField>
    <fullName>Building_No__c</fullName>
    <label>Building No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>