force-app/main/default/objects/Resale_Process__c/fields/Buyer1_Address__c.field-meta.xml
<CustomField>
    <fullName>Buyer1_Address__c</fullName>
    <label>Buyer1 Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>