force-app/main/default/objects/Resale_Process__c/fields/Buyer1_Email__c.field-meta.xml
<CustomField>
    <fullName>Buyer1_Email__c</fullName>
    <label>Buyer1 Email</label>
    <type>Email</type>
</CustomField>