force-app/main/default/objects/Resale_Process__c/fields/Buyer1_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer1_Name__c</fullName>
    <label>Buyer1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>