force-app/main/default/objects/Resale_Process__c/fields/Buyer1_Unit_Share_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Buyer1_Unit_Share_Transfer__c</fullName>
    <label>Buyer1 Unit Share Transfer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>