force-app/main/default/objects/Resale_Process__c/fields/Buyer_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Mortgage__c</fullName>
    <label>Buyer Mortgage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>