force-app/main/default/objects/Resale_Process__c/fields/Cheque_amount__c.field-meta.xml
<CustomField>
    <fullName>Cheque_amount__c</fullName>
    <label>Cheque amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>