force-app/main/default/objects/Resale_Process__c/fields/Collections_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Collections_Approval_Date__c</fullName>
    <label>Collections Approval Date</label>
    <type>DateTime</type>
</CustomField>