force-app/main/default/objects/Resale_Process__c/fields/Collections_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collections_Rejection_Date__c</fullName>
    <label>Collections Rejection Date</label>
    <type>DateTime</type>
</CustomField>