force-app/main/default/objects/Resale_Process__c/fields/Count_of_PDC_s_available__c.field-meta.xml
<CustomField>
    <fullName>Count_of_PDC_s_available__c</fullName>
    <label>Count of PDC’s available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>