force-app/main/default/objects/Resale_Process__c/fields/CRM_Document_Controller__c.field-meta.xml
<CustomField>
    <fullName>CRM_Document_Controller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM Document Controller</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resale_Process</relationshipName>
    <type>Lookup</type>
</CustomField>