force-app/main/default/objects/Resale_Process__c/fields/CRM_Resubmit_comments__c.field-meta.xml
<CustomField>
    <fullName>CRM_Resubmit_comments__c</fullName>
    <label>CRM Resubmit comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>