force-app/main/default/objects/Resale_Process__c/fields/DM_No__c.field-meta.xml
<CustomField>
    <fullName>DM_No__c</fullName>
    <label>DM No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>