force-app/main/default/objects/Resale_Process__c/fields/Documents_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Documents_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Uploaded</label>
    <type>Checkbox</type>
</CustomField>