force-app/main/default/objects/Resale_Process__c/fields/Due_payments1__c.field-meta.xml
<CustomField>
    <fullName>Due_payments1__c</fullName>
    <formula>Booking__r.Due_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>