force-app/main/default/objects/Resale_Process__c/fields/Due_payments__c.field-meta.xml
<CustomField>
    <fullName>Due_payments__c</fullName>
    <label>Due payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>