force-app/main/default/objects/Resale_Process__c/fields/Handover_Status_Completed1__c.field-meta.xml
<CustomField>
    <fullName>Handover_Status_Completed1__c</fullName>
    <formula>Booking__r.Handover_Completed_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handover Status Completed</label>
    <type>Checkbox</type>
</CustomField>