force-app/main/default/objects/Resale_Process__c/fields/Handover_Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>Handover_Status_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handover Status Completed</label>
    <type>Checkbox</type>
</CustomField>