force-app/main/default/objects/Resale_Process__c/fields/Initial_Contract_Dated__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contract_Dated__c</fullName>
    <label>Initial Contract Dated</label>
    <type>Date</type>
</CustomField>