force-app/main/default/objects/Resale_Process__c/fields/Initial_Contract_of_Sale_No__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contract_of_Sale_No__c</fullName>
    <label>Initial Contract of Sale No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>