force-app/main/default/objects/Resale_Process__c/fields/is_cheklist_completed__c.field-meta.xml
<CustomField>
    <fullName>is_cheklist_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is cheklist completed</label>
    <type>Checkbox</type>
</CustomField>