force-app/main/default/objects/Resale_Process__c/fields/Late_payment_charges__c.field-meta.xml
<CustomField>
    <fullName>Late_payment_charges__c</fullName>
    <label>Late payment charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>