force-app/main/default/objects/Resale_Process__c/fields/New_Buyer_PDC_required__c.field-meta.xml
<CustomField>
    <fullName>New_Buyer_PDC_required__c</fullName>
    <label>New Buyer PDC required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>