force-app/main/default/objects/Resale_Process__c/fields/New_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Value__c</fullName>
    <label>New Sale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>