force-app/main/default/objects/Resale_Process__c/fields/NOC_Categories_del__c.field-meta.xml
<CustomField>
    <fullName>NOC_Categories_del__c</fullName>
    <label>NOC Categories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oqood</fullName>
            </value>
            <value>
                <fullName>Title Deed</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>