force-app/main/default/objects/Resale_Process__c/fields/NOC_DocSign_Completed__c.field-meta.xml
<CustomField>
    <fullName>NOC_DocSign_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOC DocSign Completed</label>
    <type>Checkbox</type>
</CustomField>