force-app/main/default/objects/Resale_Process__c/fields/NOC_Type__c.field-meta.xml
<CustomField>
    <fullName>NOC_Type__c</fullName>
    <label>NOC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Mortgage</fullName>
                <isActive>false</isActive>
                <label>Mortgage</label>
            </value>
            <value>
                <fullName>Oqood</fullName>
                <isActive>false</isActive>
                <label>Oqood</label>
            </value>
            <value>
                <fullName>Oqood for Apartment</fullName>
                <isActive>false</isActive>
                <label>Oqood for Apartment</label>
            </value>
            <value>
                <fullName>Oqood for Plots &amp; Villas</fullName>
                <isActive>false</isActive>
                <label>Oqood for Plots &amp; Villas</label>
            </value>
            <value>
                <fullName>Resale with Mortgage</fullName>
                <isActive>false</isActive>
                <label>Resale with Mortgage</label>
            </value>
            <value>
                <fullName>Title Deed</fullName>
                <isActive>false</isActive>
                <label>Title Deed</label>
            </value>
            <value>
                <fullName>Title Transfer for Apartment - With Mortgage</fullName>
                <isActive>false</isActive>
                <label>Title Transfer for Apartment - With Mortgage</label>
            </value>
            <value>
                <fullName>Title Transfer for Apartment - Without Mortgage</fullName>
                <isActive>false</isActive>
                <label>Title Transfer for Apartment - Without Mortgage</label>
            </value>
            <value>
                <fullName>Title Transfer for Plots &amp; Villas</fullName>
                <isActive>false</isActive>
                <label>Title Transfer for Plots &amp; Villas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>