force-app/main/default/objects/Resale_Process__c/fields/Oqood_Title_deed_received_by_new_buyer__c.field-meta.xml
<CustomField>
    <fullName>Oqood_Title_deed_received_by_new_buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oqood Title deed received by new buyer</label>
    <type>Checkbox</type>
</CustomField>