force-app/main/default/objects/Resale_Process__c/fields/Other_Charges_paid__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_paid__c</fullName>
    <label>Other Charges paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>