force-app/main/default/objects/Resale_Process__c/fields/outstand_Amt_40_purchase_price_IOM__c.field-meta.xml
<CustomField>
    <fullName>outstand_Amt_40_purchase_price_IOM__c</fullName>
    <inlineHelpText>outstanding Amount-In case of less than 40% of purchase price IOM(Management Approval) to be provided by CRM</inlineHelpText>
    <label>outstand Amt 40% purchase price IOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>