force-app/main/default/objects/Resale_Process__c/fields/Paid_percentage1__c.field-meta.xml
<CustomField>
    <fullName>Paid_percentage1__c</fullName>
    <formula>Booking__r.Paid_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>