force-app/main/default/objects/Resale_Process__c/fields/Paid_percentage__c.field-meta.xml
<CustomField>
    <fullName>Paid_percentage__c</fullName>
    <label>Paid percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>