force-app/main/default/objects/Resale_Process__c/fields/PDC_s_of_the_current_Buyer__c.field-meta.xml
<CustomField>
    <fullName>PDC_s_of_the_current_Buyer__c</fullName>
    <label>PDC&apos;s of the current Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>