force-app/main/default/objects/Resale_Process__c/fields/Resale_Noc_Sent_For_Sign__c.field-meta.xml
<CustomField>
    <fullName>Resale_Noc_Sent_For_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resale Noc Sent For Sign</label>
    <type>Checkbox</type>
</CustomField>