force-app/main/default/objects/Resale_Process__c/fields/Resale_Process_Stage__c.field-meta.xml
<CustomField>
    <fullName>Resale_Process_Stage__c</fullName>
    <label>Resale Process Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>