force-app/main/default/objects/Resale_Process__c/fields/Resale_Type__c.field-meta.xml
<CustomField>
    <fullName>Resale_Type__c</fullName>
    <label>Resale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resale with Mortgage</fullName>
            </value>
            <value>
                <fullName>Title Transfer for Plots</fullName>
            </value>
            <value>
                <fullName>Title Transfer for Apt &amp; Villas</fullName>
            </value>
            <value>
                <fullName>Oqood for Apt &amp; Villas</fullName>
            </value>
            <value>
                <fullName>Oqood for Plots</fullName>
            </value>
            <value>
                <fullName>Oqood</fullName>
                <isActive>false</isActive>
                <label>Oqood</label>
            </value>
            <value>
                <fullName>Ownership Transfer (Title Deed)</fullName>
                <isActive>false</isActive>
                <label>Ownership Transfer (Title Deed)</label>
            </value>
            <value>
                <fullName>Ownership transfer(Oqood)</fullName>
                <isActive>false</isActive>
                <label>Ownership transfer(Oqood)</label>
            </value>
            <value>
                <fullName>Title Deed</fullName>
                <isActive>false</isActive>
                <label>Title Deed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>