force-app/main/default/objects/Resale_Process__c/fields/Seller1_Address__c.field-meta.xml
<CustomField>
    <fullName>Seller1_Address__c</fullName>
    <label>Seller1 Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>