force-app/main/default/objects/Resale_Process__c/fields/Seller1_Email__c.field-meta.xml
<CustomField>
    <fullName>Seller1_Email__c</fullName>
    <label>Seller1 Email</label>
    <type>Email</type>
</CustomField>