force-app/main/default/objects/Resale_Process__c/fields/Seller1_Emirates_Id__c.field-meta.xml
<CustomField>
    <fullName>Seller1_Emirates_Id__c</fullName>
    <label>Seller1 Emirates Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>