force-app/main/default/objects/Resale_Process__c/fields/Seller1_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller1_Name__c</fullName>
    <label>Seller1 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>