force-app/main/default/objects/Resale_Process__c/fields/Seller1_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Seller1_Passport_Number__c</fullName>
    <label>Seller1 Passport Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>