force-app/main/default/objects/Resale_Process__c/fields/Seller_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Seller_Mortgage__c</fullName>
    <label>Seller Mortgage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>