force-app/main/default/objects/Resale_Process__c/fields/Total_on_account_money1__c.field-meta.xml
<CustomField>
    <fullName>Total_on_account_money1__c</fullName>
    <formula>ROUND(Booking__r.Total_On_Account_Money_With_Registration__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total on account money</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>