force-app/main/default/objects/Resale_Process__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Resale Process</relationshipLabel>
    <relationshipName>Resale_Process</relationshipName>
    <type>Lookup</type>
</CustomField>