force-app/main/default/objects/Resale_Process__c/fields/Transferrer_Date__c.field-meta.xml
<CustomField>
    <fullName>Transferrer_Date__c</fullName>
    <label>Transferrer Date</label>
    <type>Date</type>
</CustomField>