force-app/main/default/objects/Resale_Process__c/fields/Type_of_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Buyer__c</fullName>
    <label>Type of Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>