force-app/main/default/objects/Resale_Process__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Resale Process</relationshipLabel>
    <relationshipName>Resale_Process</relationshipName>
    <type>Lookup</type>
</CustomField>