force-app/main/default/objects/Resale_Process__c/fields/Unprocessed_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Unprocessed_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unprocessed Receipt</label>
    <type>Checkbox</type>
</CustomField>