force-app/main/default/objects/Resale_Process__c/fields/X40_purchase_price_cur_due_instal_paid__c.field-meta.xml
<CustomField>
    <fullName>X40_purchase_price_cur_due_instal_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>40% of the purchase price and current due instalment is paid</inlineHelpText>
    <label>40% purchase price &amp; cur due instal paid</label>
    <type>Checkbox</type>
</CustomField>