force-app/main/default/objects/Resale_Process__c/validationRules/Title_Deed_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Title_Deed_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(OR(Text(Resale_Type__c) = &apos;Title Transfer for Plots&apos;, TEXT(Resale_Type__c)= &apos;Title Transfer for Apt &amp; Villas&apos;),IF(OR(TEXT(Rejected_To__c)=&apos;Audit Rejected to Collections&apos;,TEXT(Rejected_To__c)=&apos;Accounts Rejected to Collections&apos;,TEXT(Rejected_To__c)=&apos;Audit Rejected to Collections &amp; Accounts&apos;, TEXT(Rejected_To__c)=&apos;Audit Rejected to CRM &amp; Collections &amp; Accounts&apos;), true, false), false)</errorConditionFormula>
    <errorDisplayField>Rejected_To__c</errorDisplayField>
    <errorMessage>You can&apos;t reject Title Deed to Collections, Please select different team</errorMessage>
</ValidationRule>