force-app/main/default/objects/Resale_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>New_Sale_Value__c</columns>
    <columns>NOC_DocSign_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <role>Admin</role>
    </sharedTo>
</ListView>